--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "i": "^0.3.7",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "mongodb": "^6.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
